--- a/recommended.html
+++ b/recommended.html
@@ -5,8 +5,8 @@
 
    <!-- Standard site meta information -->
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>Kith ← Either a Blog ← Tim Sears</title>
-   <meta name="author" content="Tim Sears" />
+   <title>Recommended ← Either a Blog ← Tim Sears</title>
+   <meta name="author" content="Tim" Sears />
 
    <!--link rel='openid.server' href='http://www.myopenid.com/server' / -->
    <!-- link rel='openid.delegate' href='http://timsears.githun.io' / -->
@@ -40,7 +40,7 @@
 
 </head>
 
-<body id="Recommended">
+<body id="Blog">
 
 <div id="site">
   <div id="header">
@@ -58,34 +58,30 @@
 
 <div id="page">
 
-<h1 id="other-machine-learning-blogs">Other Machine Learning Blogs</h1>
-<div class="note">
-<blockquote>
-<p><strong>kith</strong> (kıθ), <em>n</em>:<br /> 1. Knowledge, acquaintance with something; knowledge communicated, information.<br /> 2. The persons who are known or familiar, taken collectively; one’s friends, fellow-countrymen, or neighbours; acquaintance;</p>
-</blockquote>
-</div>
-<p></p>
+<h2 id="recent-posts-from-some-of-the-blogs-i-follow.">Recent posts from some of the blogs I follow.</h2>
+<!-- The following (unordered) list of machine learning and data mining blogs is by
+no means exhaustive. They represent those I find most interesting and which are
+updated on a semi-regular basis.
 
-<p>The following (unordered) list of machine learning and data mining blogs is by no means exhaustive. They represent those I find most interesting and which are updated on a semi-regular basis.</p>
-<ul>
-<li>Larry Wasserman’s <a href="http://normaldeviate.wordpress.com">Normal Deviate</a></li>
-<li>John Langford’s <a href="http://hunch.net">Machine Learning (Theory)</a></li>
-<li>Alex Smola’s <a href="http://blog.smola.org/">Adventures in Data Land</a></li>
-<li>Cosma Shalizi’s <a href="http://bactra.org/weblog">Three-Toed Sloth</a></li>
-<li>Andrew Gelman’s <a href="http://andrewgelman.com/">Statistical Modeling, Causal Inference, and Social Science</a></li>
-<li>The Havard Intelligent Probabilistic Systems’ <a href="https://hips.seas.harvard.edu/blog/">blog</a></li>
-<li>Sébastian Bubeck’s <a href="https://blogs.princeton.edu/imabandit/author/sebastien-bubeck/">I’m a bandit</a></li>
-<li>Jake Abernethy et al.’s <a href="http://inherentuncertainty.org/">Inherent Uncertainty</a></li>
-<li>Maxim Raginsky’s <a href="http://infostructuralist.wordpress.com/">The Information Structuralist</a></li>
-<li>Mikio Braun’s <a href="http://blog.mikiobraun.de/">Marginally Interesting</a></li>
-<li>Justin Domke’s <a href="http://justindomke.wordpress.com">Weblog</a></li>
-<li>Hal Daume III’s <a href="http://nlpers.blogspot.com/">Natural Language Processing</a> blog</li>
-<li>Yisong Yue’s <a href="http://yyue.blogspot.com/">Random Ponderings</a></li>
-<li>William Cohen’s <a href="http://wcohen.blogspot.com">Cranial Darwinism</a></li>
-<li>Brendan O’Connor’s <a href="http://anyall.org/blog/">AI and Social Science</a> blog</li>
-<li>David Pennock’s <a href="http://blog.oddhead.com">Oddhead Blog</a></li>
-</ul>
-<h2 id="recent-posts-from-the-above-blogs">Recent posts from the above blogs</h2>
+*  Larry Wasserman's [Normal Deviate](http://normaldeviate.wordpress.com)
+*  John Langford's [Machine Learning (Theory)](http://hunch.net)
+*  Alex Smola's [Adventures in Data Land](http://blog.smola.org/)
+*  Cosma Shalizi's [Three-Toed Sloth](http://bactra.org/weblog)
+*  Andrew Gelman's [Statistical Modeling, Causal Inference, and Social Science](http://andrewgelman.com/)
+*  The Havard Intelligent Probabilistic Systems' [blog](https://hips.seas.harvard.edu/blog/)
+*  Sébastian Bubeck's [I'm a bandit](https://blogs.princeton.edu/imabandit/author/sebastien-bubeck/)
+*  Jake Abernethy et al.'s [Inherent Uncertainty](http://inherentuncertainty.org/)
+*  Maxim Raginsky's [The Information Structuralist](http://infostructuralist.wordpress.com/)
+*  Mikio Braun's [Marginally Interesting](http://blog.mikiobraun.de/)
+*  Justin Domke's [Weblog](http://justindomke.wordpress.com)
+*  Hal Daume III's [Natural Language Processing](http://nlpers.blogspot.com/) blog
+*  Yisong Yue's [Random Ponderings](http://yyue.blogspot.com/)
+*  William Cohen's [Cranial Darwinism](http://wcohen.blogspot.com)
+*  Brendan O'Connor's [AI and Social Science](http://anyall.org/blog/) blog
+*  David Pennock's [Oddhead Blog](http://blog.oddhead.com)
+
+-->
+
 <ul id="amjr">
    <li>
 Loading recent posts…
@@ -112,7 +108,7 @@ Loading recent posts…
                                 query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
                         }
                 }
-                document.write('<script type="text/javascript" src="http://disqus.com/forums/markreid/get_num_replies.js' + query + '"></' + 'script>');
+                document.write('<script type="text/javascript" src="http://disqus.com/forums/timsears/get_num_replies.js' + query + '"></' + 'script>');
         })();
 //]]>
 </script>
@@ -122,7 +118,7 @@ Loading recent posts…
   <div id="footer">
 	<address>
 		<span class="copyright">
-			Content by Tim Sears <a rel="licence" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">(Licensed under Creative Commons)</a>
+			Content by Tim Sears <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">(Licensed under Creative Commons)</a>
 		</span>
 		<span class="engine">
                   Design by 
