--- a/archive.html
+++ b/archive.html
@@ -5,8 +5,8 @@
 
    <!-- Standard site meta information -->
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>Archives ← Either a Blog ← Tim Sears</title>
-   <meta name="author" content="Tim Sears" />
+   <title>Archive ← Either a Blog ← Tim Sears</title>
+   <meta name="author" content="Tim" Sears />
 
    <!--link rel='openid.server' href='http://www.myopenid.com/server' / -->
    <!-- link rel='openid.delegate' href='http://timsears.githun.io' / -->
@@ -40,7 +40,7 @@
 
 </head>
 
-<body id="Home">
+<body id="Archive">
 
 <div id="site">
   <div id="header">
@@ -58,8 +58,12 @@
 
 <div id="page">
 
-<h1 id="archives">Archives</h1>
-<p>This is the complete archive of posts from <a href="./iem">Inductio Ex Machina</a> in reverse chronological order.</p>
+<h1 id="archive">Archive</h1>
+<!-- Here are the past posts [Either a Blog](/) in 
+reverse chronological order.
+-->
+
+
 
 <div class="section list">
 <h1>
@@ -140,7 +144,7 @@ Veni Vidi Vici
                                 query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
                         }
                 }
-                document.write('<script type="text/javascript" src="http://disqus.com/forums/markreid/get_num_replies.js' + query + '"></' + 'script>');
+                document.write('<script type="text/javascript" src="http://disqus.com/forums/timsears/get_num_replies.js' + query + '"></' + 'script>');
         })();
 //]]>
 </script>
@@ -150,7 +154,7 @@ Veni Vidi Vici
   <div id="footer">
 	<address>
 		<span class="copyright">
-			Content by Tim Sears <a rel="licence" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">(Licensed under Creative Commons)</a>
+			Content by Tim Sears <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">(Licensed under Creative Commons)</a>
 		</span>
 		<span class="engine">
                   Design by 
