--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <!-- Standard site meta information -->
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>Home ← Either a Blog ← Tim Sears</title>
-   <meta name="author" content="Tim Sears" />
+   <meta name="author" content="Tim" Sears />
 
    <!--link rel='openid.server' href='http://www.myopenid.com/server' / -->
    <!-- link rel='openid.delegate' href='http://timsears.githun.io' / -->
@@ -58,9 +58,9 @@
 
 <div id="page">
 
-<h1 id="thoughts-on-machine-learning-and-inference">Thoughts on Machine Learning and Inference</h1>
-<p><em>Inductio Ex Machina</em> is <a href="./">Mark Reid</a>'s research blog on machine learning and statistics.</p>
-<p>More <a href="info.html">information</a> about this blog, its <a href="kith.html">kith</a> (blogroll, bookmarks, <em>etc.</em>), and a complete archive of <a href="past.html">past</a> posts, are available via links at the top of the page.</p>
+<h1 id="welcome">Welcome!</h1>
+<p><code>Either a Blog</code> is a a blog about Haskell, machine learning, data analysis and math. And maybe a few other things too.</p>
+<p>Here's a list of recent posts:</p>
 <h2 id="recent-posts">Recent Posts</h2>
 
 <div class="section list">
@@ -127,7 +127,7 @@ Veni Vidi Vici
   
 </div>
 <p></p>
-<p><a href="past.html">Older Posts →</a></p>
+<p><a href="archive.html">All Posts →</a></p>
 
 </div>
 
@@ -143,7 +143,7 @@ Veni Vidi Vici
                                 query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
                         }
                 }
-                document.write('<script type="text/javascript" src="http://disqus.com/forums/markreid/get_num_replies.js' + query + '"></' + 'script>');
+                document.write('<script type="text/javascript" src="http://disqus.com/forums/timsears/get_num_replies.js' + query + '"></' + 'script>');
         })();
 //]]>
 </script>
@@ -153,7 +153,7 @@ Veni Vidi Vici
   <div id="footer">
 	<address>
 		<span class="copyright">
-			Content by Tim Sears <a rel="licence" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">(Licensed under Creative Commons)</a>
+			Content by Tim Sears <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">(Licensed under Creative Commons)</a>
 		</span>
 		<span class="engine">
                   Design by 
