Publish first time

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
 <p><br></p>
 <h1 id="either-a-blog"><code>Either a Blog</code></h1>
 <p>I have an interest in Haskell, functional programming, math, finance, machine learning and computer vision. You might see blog posts touching on all these areas at some point.</p>
-<p><code>Either a b</code> is a commonly used data type in Haskell. It can be used for lots of things, but is often used to represent computations that can fail. In this case, a <code>Blog</code>.</p>
+<p><code>Either a b</code> is a commonly used data type in Haskell. It can be used for lots of things, but is often used to represent computations that can fail. In that usage <code>b</code> is the type of a successful result and <code>a</code> is the type of any error conditions. In other uses, <code>a</code> is the final result and <code>b</code> is the type of any intermediate result, leading to more iteration. The reader will have to determine the semantics that apply to <code>Either a</code>Blog` :-).</p>
 <h1 id="contact">Contact</h1>
 <p>You can email me at</p>
 <pre class="haskell"><code>concat . reverse $ [&quot;.com&quot;, &quot;timsears&quot;, &quot;tim@&quot;]</code></pre>
