--- a/archive.html
+++ b/archive.html
@@ -67,68 +67,25 @@ reverse chronological order.
 
 <div class="section list">
 <h1>
- 7 Dec 12
+24 Jul 14
 </h1>
   
 <p class="line">
 	
-<a class="title" href="./posts/tu-quoque.html">Tu Quoque</a> <a class="comments" href="./posts/tu-quoque.html#disqus_thread">View Comments</a>
+<a class="title" href="./posts/Predictions_from_the_Past.html">Predictions from the Past, Hope for the Futurist</a> <a class="comments" href="./posts/Predictions_from_the_Past.html#disqus_thread">View Comments</a>
 </p>
 
 <p class="excerpt">
-Veni vide Vici
-</p>
-  
-</div>
-<p>
-<div class="section list">
-<h1>
-28 Nov 12
-</h1>
-  
-<p class="line">
-	
-<a class="title" href="./posts/carpe-diem.html">Carpe Diem</a> <a class="comments" href="./posts/carpe-diem.html#disqus_thread">View Comments</a>
-</p>
-
-<p class="excerpt">
-Hoya
-</p>
-  
-</div>
-<p>
-<div class="section list">
-<h1>
- 7 Oct 12
-</h1>
-  
-<p class="line">
-	
-<a class="title" href="./posts/rosa-rosa-rosam.html">Rosa Rosa Rosam</a> <a class="comments" href="./posts/rosa-rosa-rosam.html#disqus_thread">View Comments</a>
-</p>
-
-<p class="excerpt">
-Caveat Emptor
-</p>
-  
-</div>
-<p>
-<div class="section list">
-<h1>
-12 Aug 12
-</h1>
-  
-<p class="line">
-	
-<a class="title" href="./posts/spqr.html">S.P.Q.R.</a> <a class="comments" href="./posts/spqr.html#disqus_thread">View Comments</a>
-</p>
-
-<p class="excerpt">
-Veni Vidi Vici
+The future is not that hard to predict, except for the fashions.
 </p>
   
 </div>
 <p></p>
+<div>
+<address id="feed" class="quiet right">
+Subscribe: <a href="./blog/atom.xml" title="Subscribe to Atom feed"><em>Atom Feed</em></a>
+</address>
+</div>
 
 </div>
 
