publish Free Monads Just Got Cheaper

--- a/index.html
+++ b/index.html
@@ -65,6 +65,22 @@
 
 <div class="section list">
 <h1>
+ 8 Sep 14
+</h1>
+  
+<p class="line">
+	
+<a class="title" href="./posts/Free_Monads_Just_Got_Cheaper.html">Free Monads Just Got Cheaper</a> <a class="comments" href="./posts/Free_Monads_Just_Got_Cheaper.html#disqus_thread">View Comments</a>
+</p>
+
+<p class="excerpt">
+Reflecting without remorse on free monads.
+</p>
+  
+</div>
+<p>
+<div class="section list">
+<h1>
 24 Jul 14
 </h1>
   
