publish im trying nix

--- a/archive.html
+++ b/archive.html
@@ -68,6 +68,22 @@ reverse chronological order.
 <div class="section list">
 
 <h1>
+16 Oct 14
+</h1>
+  
+<p class="line">
+	
+<a class="title" href="./posts/im_trying_nix.html">I am trying nixos</a> <a class="comments" href="./posts/im_trying_nix.html#disqus_thread">View Comments</a>
+</p>
+
+<p class="excerpt">
+I am trying nixox. Only 10 days in.
+</p>
+  </div>
+<p>
+<div class="section list">
+
+<h1>
  8 Sep 14
 </h1>
   
