--- a/archive.html
+++ b/archive.html
@@ -77,7 +77,7 @@ reverse chronological order.
 </p>
 
 <p class="excerpt">
-I am trying nixox. Only 10 days in.
+I am trying nixos. Only 10 days in.
 </p>
   </div>
 <p>
