--- a/index.html
+++ b/index.html
@@ -66,6 +66,38 @@
 <div class="section list">
 
 <h1>
+13 Dec 14
+</h1>
+  
+<p class="line">
+	
+<a class="title" href="./posts/morenix.html">I am trying nix - Part 2</a> <a class="comments" href="./posts/morenix.html#disqus_thread">View Comments</a>
+</p>
+
+<p class="excerpt">
+Some nix tips
+</p>
+  </div>
+<p>
+<div class="section list">
+
+<h1>
+16 Oct 14
+</h1>
+  
+<p class="line">
+	
+<a class="title" href="./posts/morenix.html">I am trying nix - Part 2</a> <a class="comments" href="./posts/morenix.html#disqus_thread">View Comments</a>
+</p>
+
+<p class="excerpt">
+Some nix tips
+</p>
+  </div>
+<p>
+<div class="section list">
+
+<h1>
 16 Oct 14
 </h1>
   
