new site generator. edited morenix.markdown

--- a/archive.html
+++ b/archive.html
@@ -59,7 +59,7 @@
 <div id="page">
 
 <h1 id="archive">Archive</h1>
-<!-- Here are the past posts [Either a Blog](/) in 
+<!-- Here are the past posts [Either a Blog](/) in
 reverse chronological order.
 -->
 
@@ -68,9 +68,9 @@ reverse chronological order.
 <div class="section list">
 
 <h1>
-13 Dec 14
+Dec-13-2014
 </h1>
-  
+
 <p class="line">
 	
 <a class="title" href="./posts/morenix.html">I am trying nix - Part 2</a> <a class="comments" href="./posts/morenix.html#disqus_thread">View Comments</a>
@@ -84,9 +84,9 @@ Some nix tips
 <div class="section list">
 
 <h1>
-16 Oct 14
+Oct-16-2014
 </h1>
-  
+
 <p class="line">
 	
 <a class="title" href="./posts/im_trying_nix.html">I am trying nixos</a> <a class="comments" href="./posts/im_trying_nix.html#disqus_thread">View Comments</a>
@@ -100,9 +100,9 @@ I am trying nixos. Only 10 days in.
 <div class="section list">
 
 <h1>
- 8 Sep 14
+Sep- 9-2014
 </h1>
-  
+
 <p class="line">
 	
 <a class="title" href="./posts/Free_Monads_Just_Got_Cheaper.html">Free Monads Just Got Cheaper</a> <a class="comments" href="./posts/Free_Monads_Just_Got_Cheaper.html#disqus_thread">View Comments</a>
@@ -116,9 +116,9 @@ Reflecting without remorse on free monads.
 <div class="section list">
 
 <h1>
-24 Jul 14
+Jul-24-2014
 </h1>
-  
+
 <p class="line">
 	
 <a class="title" href="./posts/Predictions_from_the_Past.html">Predictions from the Past, Hope for the Futurist</a> <a class="comments" href="./posts/Predictions_from_the_Past.html#disqus_thread">View Comments</a>
@@ -133,7 +133,7 @@ The future is not that hard to predict, except for the fashions.
 <address id="feed" class="quiet right">
 Subscribe: <a href="./blog/atom.xml" title="Subscribe to Atom feed"><em>Atom Feed</em></a>
 </address>
-</div> 
+</div>
 
 
 
