--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <div class="section list">
 
 <h1>
-13 Dec 14
+Dec-13-2014
 </h1>
   
 <p class="line">
@@ -82,7 +82,7 @@ Some nix tips
 <div class="section list">
 
 <h1>
-16 Oct 14
+Oct-16-2014
 </h1>
   
 <p class="line">
@@ -98,7 +98,7 @@ I am trying nixos. Only 10 days in.
 <div class="section list">
 
 <h1>
- 8 Sep 14
+Sep- 9-2014
 </h1>
   
 <p class="line">
@@ -114,7 +114,7 @@ Reflecting without remorse on free monads.
 <div class="section list">
 
 <h1>
-24 Jul 14
+Jul-24-2014
 </h1>
   
 <p class="line">
